fix: player spacing

--- a/frontend/src/components/Playback/Playback.scss
+++ b/frontend/src/components/Playback/Playback.scss
@@ -2,5 +2,5 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 0 0 25px;
+  padding: 0 0 10px;
 }
